fix(FEV-1198): remove scrollbars + small style fixes for questions

--- a/src/components/quiz-question/multi-choice/multi-choice.scss
+++ b/src/components/quiz-question/multi-choice/multi-choice.scss
@@ -7,9 +7,10 @@
   width: 100%;
   max-height: 100%;
   .questionText {
-    flex-shrink: 0;
-    font-weight: bold;
     @include ivq-text;
+    flex-shrink: 0;
+    overflow-wrap: break-word;
+    font-weight: bold;
     overflow: initial;
   }
 
@@ -23,6 +24,7 @@
     .optionalAnswersContainer {
       display: flex;
       flex-direction: column;
+      max-width: 100%;
       .multiSelectAnswer {
         @include optional-answer;
         height: auto;
@@ -64,6 +66,7 @@
         .questionContent {
           flex-grow: 1;
           padding: 5px 16px 5px 8px;
+          min-width: fit-content;
         }
       }
     }
