--- a/src/components/quiz-question/reflection-point/reflection-point.scss
+++ b/src/components/quiz-question/reflection-point/reflection-point.scss
@@ -7,8 +7,9 @@
   width: 100%;
   max-height: 100%;
   .reflectionText {
-    flex-shrink: 0;
     @include ivq-text;
+    flex-shrink: 0;
+    overflow-wrap: break-word;
     font-size: 16px;
   }
 }
