--- a/src/components/quiz-review/question-review/question-review.scss
+++ b/src/components/quiz-review/question-review/question-review.scss
@@ -38,11 +38,14 @@
     text-align: left;
     .questionText {
       @include ivq-text;
+      flex-shrink: 0;
+      overflow-wrap: break-word;
       font-weight: bold;
       margin-bottom: 4px;
     }
     .correctAnswerIs {
       @include ivq-text;
+      flex-shrink: 0;
       font-size: 16px;
       line-height: 21px;
       margin-bottom: 10px;
@@ -51,6 +54,8 @@
     .yourAnswer,
     .openQuestionAnswer {
       @include ivq-text;
+      flex-shrink: 0;
+      overflow-wrap: break-word;
       font-size: 14px;
       line-height: 18px;
     }
@@ -86,6 +91,7 @@
       flex-direction: row;
       overflow: auto;
       margin-top: 4px;
+      @include without-scrollbar;
 
       .multiAnswersContainer {
         display: flex;
@@ -119,9 +125,10 @@
             background-clip: padding-box;
           }
           .questionContent {
+            min-width: 36px;
             height: 100%;
             flex-grow: 1;
-            flex-shrink: 0;
+            flex-shrink: 1;
             padding: 5px 16px 5px 8px;
             overflow: hidden;
             white-space: nowrap;
